spacing issues and lives

--- a/wa/wa10/wa10.css
+++ b/wa/wa10/wa10.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;             /* take up full screen height */
@@ -18,6 +19,8 @@ body {
     min-height: 20vh;     /* welcome state */
     text-align: center;
     transition: min-height 0.3s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -33,9 +36,14 @@ body {
 }
 
 .app.active {
-  min-height: 60vh;     /* bigger after Start */
+  min-height: 50vh;     /* bigger after Start */
 }
 
+.quote-text{
+  display: flex;
+  flex: 1;
+  align-items: center;        /* vertical center */
+}
 .main-btn{
     padding: 0.25em 0.5em;
     font-size: 24px;
@@ -86,6 +94,13 @@ body {
     left: 5px; /* moves button 10px right */
 }
 
+.btn-group{
+  display: flex;
+  justify-content: center;
+  gap: 30px;  
+  margin: 20px;
+}
+
 .hidden {
   display: none;
 }
@@ -93,4 +108,8 @@ body {
 .disabled {
   opacity: 0.5;
   pointer-events: none;
+}
+
+#js-trump-btn{
+  background-color: #1ecbe1;
 }
